# playing-with-agents

./: README.md  main.py  pyproject.toml
basics/: basic-agent.ipynb
src/: requirements.txt
src/agents/profile/: profile-agent-with-tools.py
src/agents/profile/me/: my_description.txt
src/basics/: basic-agent.ipynb
src/openAI Agents SDK/: learning1.ipynb
src/profile/: README.md  profile-agent-with-tools.drawio  profile-agent-with-tools.ipynb  profile-agent.ipynb
src/profile/me/: my_description.txt
