[project]
name = "playing-with-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx==0.27.0",
    "ipykernel>=6.30.1",
    "langfuse>=3.2.6",
    "openai>=1.99.9",
    "openai-agents>=0.2.7",
    "python-dotenv>=1.1.1",
]

[tool.uv.workspace]
members = [
    ".",
    ".",
    ".",
]

[tool.uv.sources]
playing-with-agents = { workspace = true }

[dependency-groups]
dev = [
    "playing-with-agents",
]
